# retryhttp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/retryhttp/: __init__.py  backoff.py  httpx_client.py  requests_client.py  retry.py
tests/: test_backoff.py  test_httpx_client.py  test_requests_client.py  test_retry_config.py
