[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retryhttp2"
version = "0.1.0"
description = "Zero-config HTTP retries with exponential backoff, jitter, and OAuth2 token refresh for httpx and requests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Praneeth Vedantham", email = "praneethvedantham@gmail.com" }]
keywords = ["http", "retry", "backoff", "httpx", "requests", "oauth2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.25"]
requests = ["requests>=2.28"]
all = ["httpx>=0.25", "requests>=2.28"]
dev = [
    "httpx>=0.25",
    "requests>=2.28",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.28",
    "responses>=0.24",
    "hatch",
]

[project.urls]
Homepage = "https://github.com/praneethv2003/retryhttp"
Repository = "https://github.com/praneethv2003/retryhttp"
Issues = "https://github.com/praneethv2003/retryhttp/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/retryhttp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
